--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/react": "^9.4.0",
     "@testing-library/user-event": "^7.2.1",
     "bootstrap": "^4.5.3",
+    "qrcode.react": "^1.0.0",
     "query-string": "^6.13.6",
     "react": "^16.12.0",
     "react-append-to-body": "^2.0.25",
